# randomOpenGL_Code

./: .clang-format  .gitignore  CMakeLists.txt  README.md  premake5.lua
res/shaders/: fragment.glsl  vertex.glsl
scripts/: build.py  build.sh  clean.py  configure.py  configure.sh  run.py  run.sh
src/: CMakeLists.txt  glad.c  glad.h  input_handler.hpp  main.cc  main.cpp  shader.cc  shader.hpp  window.cc  window.hpp
